# Reed-Solomon-ECC-Generator

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  README_NEW.md  README_old.md  config.json  pyproject.toml
.devcontainer/: devcontainer.json
generators/: Mastrovito.py  MastrovitoMatrix.py  MastrovitoVerilog.py  ModuleVerilog.py  RSAXISVerilog.py  RSAccumulatorVerilog.py  RSSegmentVerilog.py  RSVerilogSegment.py  config.json
generators/templates/: file_header.txt  rs_axis.txt
metrics/: BERInject.py  RSApply.py  RSDataGen.py  RSEval.py  Visualizer.py  ber_curve.json  main.py
scripts/: mcore_regr.sh  sanity.sh  score_regr.sh  verilator_init.sh
src/: main.py
src/generators/: FileVerilog.py  MastrovitoMatrix.py  MastrovitoVerilog.py  ModuleVerilog.py  RSAXISVerilog.py  RSAccumulatorVerilog.py  RSSegmentVerilog.py  config.json  logging_config.py
src/generators/templates/: file_header.txt  rs_axis.txt
src/resources/: ResourceEstimator.py  YosysWrap.py  config.json
tests/: TestMastrovito.py  TestMastrovitoVerilog.py  TestMastrovitoVerilogGenerator.py  TestRSAXISVerilog.py  TestRSAXISVerilog_old.py  TestRSAccumulatorVerilog.py  TestRSSegmentVerilog.py  __init__.py
